# es-client

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml           test.py  test.txt
src/es_client/: __init__.py  client.py
